<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/first_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/first_label"/>
    <LinearLayout
        android:id="@+id/first_controls"
        android:layout_below="@id/first_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/r_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/r_text" />
        <Spinner
            android:id="@+id/r_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/g_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/g_text" />
        <Spinner
            android:id="@+id/g_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/b_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/b_text" />
        <Spinner
            android:id="@+id/b_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/second_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_controls"
        android:gravity="center"
        android:text="@string/second_label"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_label"/>

    <TextView
        android:id="@+id/third_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_bar"
        android:gravity="center"
        android:text="@string/third_label"/>

    <Button
        android:id="@+id/button"
        android:text="@string/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/third_label" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rectangle_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffff00"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/rectangle_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#00ff00"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_rectangles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button"
        android:layout_above="@id/footer"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rectangle_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/rectangle_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/rectangle_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>



</RelativeLayout>
